# bookstore

./: .gitignore  README.md  docker-compose.yml  dockerfile  env.dev  pyproject.toml
.github/workflows/: build.yml  github-actions-demo.yml
bookstore/: asgi.py  settings.py  urls.py  wsgi.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/: factories.py
order/tests/test_viewset/: test_order_viewset.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: factories.py
product/viewsets/: category_viewset.py  product_viewset.py
